--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -66,7 +66,7 @@
                 </div>
             </li>
             <li class="card">
-                <a href="imagem.html">
+                <a href="{% static 'imagem.html' %}">
                     <img class="card__imagem" src="{% static 'assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                 </a>
                 <span class="card__tag">Estrelas</span>
